# AdvanceOopFinalProject

./: CMakeLists.txt  Doxyfile  FileHandler.cpp  HammingDecoder.cpp  HammingEncoder.cpp  Makefile  README.md  decoded_data..txt  encoded_data.txt  main.cpp  testHamming.cpp
docs/html/: _file_handler_8cpp.html  _file_handler_8h.html  _file_handler_8h_source.html  _hamming_decoder_8cpp.html  _hamming_decoder_8h.html  _hamming_decoder_8h_source.html  _hamming_encoder_8cpp.html  _hamming_encoder_8h.html  _hamming_encoder_8h_source.html  annotated.html  class_file_handler-members.html  class_file_handler.html  class_hamming_decoder-members.html  class_hamming_decoder.html  class_hamming_encoder-members.html  class_hamming_encoder.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html  main_8cpp.html
docs/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_9.js  classes_1.js  files_1.js  functions_0.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  (+2 more)
docs/latex/: _file_handler_8cpp.tex  _file_handler_8h.tex  _file_handler_8h_source.tex  _hamming_decoder_8cpp.tex  _hamming_decoder_8h.tex  _hamming_decoder_8h_source.tex  _hamming_encoder_8cpp.tex  _hamming_encoder_8h.tex  _hamming_encoder_8h_source.tex  annotated.tex  class_file_handler.tex  class_hamming_decoder.tex  class_hamming_encoder.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  main_8cpp.tex  refman.tex
include/: FileHandler.h  HammingDecoder.h  HammingEncoder.h
